scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operator.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-ibm-flink-operator
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: flink
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/name: flink-kubernetes-operator
  egress:
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 6443
      to:
      - podSelector:
          matchLabels:
            apiserver: 'true'
        namespaceSelector: {}
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 8081
      - protocol: TCP
        port: 9081
      to:
      - podSelector: {}
  policyTypes:
    - Egress
